# accupy

./: .gitignore  .pylintrc  LICENSE  MANIFEST.in  Makefile  README.md  justfile  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
accupy/: __about__.py  __init__.py  dot.py  ill_cond.py  main.py  prod.py  sums.py
src/: dot.hpp  pybind11.cpp  sum.hpp
test/: test_accupy.py  test_dot.py  test_sums.py
tests/: test_dot.py  test_sums.py
