[metadata]
name = accupy
version = 0.3.4
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Accurate sums and dot products for Python
url = https://github.com/nschloe/accupy
project_urls =
    Code=https://github.com/nschloe/accupy
    Issues=https://github.com/nschloe/accupy/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Mathematics
keywords =
    mathematics
    physics
    engineering
    cgal
    mesh
    mesh generation

[options]
packages = find:
install_requires =
  importlib_metadata;python_version<'3.8'
  mpmath
  numpy
  pyfma
python_requires = >=3.6
